--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
 
-  <title>Frontend Mentor | Profile card component</title>
+
+  <title>Frontend-Mentor-Profile-card-component</title>
 
 </head>
 
-<body>
+<body class="container">
 
+    <img class="container__circle-top" src="images/bg-pattern-top.svg">
+    <img class="container__circle-bottom" src="images/bg-pattern-bottom.svg">
+
+    <main class="main">
+
+      <div class="main__profile-background">
+        <img class="main__profile-photo" src="images/image-victor.jpg">
+      </div>
+
+      <h2 class="main__name">Victor Crest <span class="main__age">26</span></h2>
+      <p class="main__city">London</p>
+
+      <div class="data">
+        <div class="data__part">
+          <h2>80K</h2>
+          <p class="data__part-name">Followers</p>
+        </div>
+        <div class="data__part">
+          <h2>803K</h2>
+          <p class="data__part-name">Likes</p>
+        </div>
+        <div class="data__part">
+          <h2>1.4K</h2>
+          <p class="data__part-name">Photos</p>
+        </div>
+      </div>
+
+    </main>
 
 </body>
 
