--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="main">
 
       <div class="main__profile-background">
-        <img class="main__profile-photo" src="images/image-victor.jpg">
+        <img class="main__profile-photo" src="images/image-victor.jpg" alt="Victor profile photo">
       </div>
 
       <h2 class="main__name">Victor Crest <span class="main__age">26</span></h2>
