--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+gi<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,12 +16,8 @@
 </head>
 
 <body class="container">
-
-    <img class="container__circle-top" src="images/bg-pattern-top.svg">
-    <img class="container__circle-bottom" src="images/bg-pattern-bottom.svg">
-
     <main class="main">
-
+      
       <div class="main__profile-background">
         <img class="main__profile-photo" src="images/image-victor.jpg" alt="Victor profile photo">
       </div>
@@ -30,22 +26,21 @@
       <p class="main__city">London</p>
 
       <div class="data">
-        <div class="data__part">
+        <div class="data__content">
           <h2>80K</h2>
-          <p class="data__part-name">Followers</p>
+          <p class="data__content-name">Followers</p>
         </div>
-        <div class="data__part">
+        <div class="data__content">
           <h2>803K</h2>
-          <p class="data__part-name">Likes</p>
+          <p class="data__content-name">Likes</p>
         </div>
-        <div class="data__part">
+        <div class="data__content">
           <h2>1.4K</h2>
-          <p class="data__part-name">Photos</p>
+          <p class="data__content-name">Photos</p>
         </div>
       </div>
 
     </main>
-
 </body>
 
 </html>
