--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-gi<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,7 +17,7 @@ gi<!DOCTYPE html>
 
 <body class="container">
     <main class="main">
-      
+
       <div class="main__profile-background">
         <img class="main__profile-photo" src="images/image-victor.jpg" alt="Victor profile photo">
       </div>
